src/test/deca/context/invalid/created/affect_NULL/BOOLEAN.deca
// Description:
//		Affecter null a un boolean
// Resultats:
//		Erreur contexte Ligne 7 : Types don't match!

{
	boolean x = null;
}
